--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,18 @@
   height: 500px;
 }
 */
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* .swiper-slide {
   overflow: visible;
 } */
