--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,12 @@
   height: 500px;
 }
 */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
