--- a/app/globals.css
+++ b/app/globals.css
@@ -58,11 +58,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
-html {
-  font-family: var(--font-raleway);
+/* html {
+  font-family: var(--font-inter);
   
   
-}
+} */
 
 .no-drag {
 	-webkit-user-drag: none;
