--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /* html {
-  font-family: var(--font-inter);
+  font-family: var(--font-raleway);
   
   
 } */
